tests/ui/consts/std/cell.stderr
error: encountered dangling pointer in final value of static
  --> $DIR/cell.rs:4:1
   |
LL | static FOO: Wrap<*mut u32> = Wrap(Cell::new(42).as_ptr());
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: encountered dangling pointer in final value of constant
  --> $DIR/cell.rs:6:1
   |
LL | const FOO_CONST: Wrap<*mut u32> = Wrap(Cell::new(42).as_ptr());
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: encountered dangling pointer in final value of constant
  --> $DIR/cell.rs:20:1
   |
LL | const FOO4_CONST: Wrap<*mut u32> = Wrap(FOO3_CONST.0.as_ptr());
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: encountered dangling pointer in final value of constant
  --> $DIR/cell.rs:25:1
   |
LL | const FOO2: *mut u32 = Cell::new(42).as_ptr();
   | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

